--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    I am test file
+  <h1>I am test file</h1>  
 </body>
 </html>
-<!----> git config --global user.email "mkkuswaha08@gmail.com"
-  git config --global user.name "Mahek Kushwaha" -->
-  <!-- -->
